# site_conductor

./: .envrc  .gitignore  Cargo.toml  INSTALLATION.md  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: claude-code-review.yml  claude.yml  release-container.yml  warnings.yml
backend/: .env.example  Cargo.toml  openapi.json
backend/migrations/: 0001_init.sql  0002_seed_vacancies.sql  0003_input_limits.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: error.rs  mod.rs  openapi.rs  router.rs  state.rs
backend/src/api/dto/: application.rs  contact.rs  mod.rs  vacancy.rs
backend/src/api/handler/: application.rs  contact.rs  health.rs  mod.rs  vacancy.rs
backend/src/application/: application_service.rs  contact_service.rs  mod.rs  vacancy_service.rs
backend/src/domain/: mod.rs
backend/src/domain/port/: application_repository.rs  contact_repository.rs  mod.rs  notifier.rs  vacancy_repository.rs
backend/src/infrastructure/: db.rs  mod.rs
backend/src/infrastructure/email/: mod.rs  notifier.rs  templates.rs  transport.rs
backend/src/infrastructure/persistence/: mod.rs  postgres_application_repository.rs  postgres_contact_repository.rs  postgres_vacancy_repository.rs
docs/: ARCHITECTURE.md
docs/.readme_assets/: description.md  installation.md  usage.md
docs/refs/: sites_to_follow.md
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/model/: application.rs  contact.rs  email.rs  message_body.rs  mod.rs  person_name.rs  portfolio_url.rs  vacancy.rs
frontend/: .env.example  .gitignore  .prettierignore  .stylelintrc.json  PATTERNS.md  README.md  components.json  config.assert.ts  config.ts  eslint.config.mjs  instrumentation.ts  mfe-registry.json  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
frontend/app/: dark-reader-hydration-filter.tsx  error.tsx  forbidden.tsx  global-error.tsx  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.alt.txt  page.tsx  robots.ts  sitemap.ts
frontend/app/api/mfe-registry/: route.ts
frontend/app/blogs/: page.tsx
frontend/app/blogs/[slug]/: page.tsx
frontend/app/cabinet/[[...path]]/: route.ts
frontend/app/coming-soon/: page.tsx
frontend/app/contact/: page.tsx
frontend/app/forbidden/: page.tsx
frontend/app/hiring/: loading.tsx  page.tsx
frontend/app/hiring/[slug]/: loading.tsx  page.tsx
frontend/app/investor-portal/: page.tsx
frontend/app/llms.txt/: route.ts
frontend/app/rea/[[...path]]/: route.ts
frontend/app/team/: page.tsx
frontend/app/whitepaper/: page.tsx
frontend/application/: metadata.ts  providers.tsx
frontend/application/layout/: account-chip-remote.tsx  build-version-log.tsx  footer.tsx  header.tsx  index.ts  investor-portal-button.tsx  mobile-menu.tsx  nav-items.ts  newsletter-form.tsx
frontend/application/styles/: globals.css
frontend/application/styles/fonts/: .gitattributes  index.ts
frontend/entities/article/: index.ts
frontend/entities/contact/: index.ts
frontend/entities/job-application/: index.ts
frontend/entities/team/: index.ts  model.ts
frontend/entities/team/ui/: leadership-intro.tsx  member-card.tsx
frontend/entities/vacancy/: index.ts
frontend/features/ab-variant/: cycle-variant.ts  dev-ab-panel.tsx  experiment-tracker.tsx  get-variant.ts  index.ts  match.ts
frontend/features/analytics/: client.ts  index.ts  posthog-provider.tsx
frontend/features/contact-message/model/: validation.ts
frontend/features/contact-message/ui/: contact-form.tsx  use-contact-form.ts
frontend/features/error-monitoring/: client.ts  error-boundary.tsx  index.ts  provider.tsx
frontend/features/investment-calculator/: index.ts
frontend/features/investment-calculator/model/: roi.ts
frontend/features/investment-calculator/ui/: investment-calculator.tsx
frontend/features/job-application/: index.ts
frontend/features/job-application/model/: validation.ts
frontend/features/job-application/ui/: application-form.tsx  field.tsx  form-chrome.tsx  role-block.tsx  use-application-form.ts
frontend/public/: whitepaper.dark.html  whitepaper.light.html
frontend/public/blogs/: hospitality_yield_shifts.dark.html  vietnam_coastal_2026.dark.html  vietnam_tail_risk.light.html
frontend/scripts/: build-shell.mts  check-zone-proxy.mts  header-behavior.ts
frontend/shared/: zone-proxy.ts  zone-shell.generated.json
frontend/shared/api/: error.ts  index.ts  runtime.ts
frontend/shared/config/: assets.ts  const.ts  experiments.ts  require-env.ts  site.ts
frontend/shared/lib/: utils.ts  validation.ts
frontend/shared/mfe/: contain-remote-styles.ts  doc-html.ts  doc-source.ts  index.ts  registry.ts  remote-document.tsx  remote-element.tsx  shadow-document.tsx  types.ts  use-remote-bundle.ts
frontend/shared/seo/: json-ld.tsx
frontend/shared/ui/: carousel.tsx  control.ts  frame-card.tsx  header-actions.tsx  logo.tsx  reveal.tsx  sent-panel.tsx  text-field.tsx  text.tsx  typography.tsx
frontend/shared/ui/document-reader/: document-reader.tsx  index.ts
frontend/tests/: global-setup.ts  sections.spec.ts  visual-reporter.ts
frontend/views/contact/: index.ts
frontend/views/contact/ui/: contact.tsx
frontend/views/hiring/: index.ts
frontend/views/hiring/ui/: board.tsx  hero.tsx  hiring.tsx  process.tsx  why.tsx
frontend/views/home/: index.ts
frontend/views/home/ui/: home.tsx  structured-data.tsx
frontend/views/not-found/: index.ts
frontend/views/not-found/ui/: not-found.tsx
frontend/views/status/: index.ts
frontend/views/team/: index.ts
frontend/views/vacancy/: index.ts
(+47 files in other folders)
