cargo-features = ["codegen-backend"]

[workspace]
members = ["backend", "domain"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.9"
domain = { path = "domain" }
dotenvy = "0.15.7"
# Shared EV tactical kernel. `architecture` is the base every crate needs; the
# backend additively enables `analytics` + `error_monitoring` (see backend/Cargo.toml).
# The crate was renamed `ev` -> `ev_lib` (the `ev` name was taken on crates.io); the
# lib target stays `ev`, so `use ev::…` and the `ev` dependency key are unchanged.
# Pinned to the 0.3.0 commit on `main` — 0.3.0 isn't on crates.io / tagged yet.
ev = { git = "https://github.com/EV-invest/lib.git", rev = "dffa88691d0fad9830c451c01446d071f9e90c71", package = "ev_lib", default-features = false, features = ["architecture"] }
jiff = "0.2"
# Transactional email. rustls (not native-tls) to share one TLS stack with sqlx.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
thiserror = "2.0.18"
time = "0.3"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = "0.6.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.23.2"

[workspace.lints.rust]
unused_features = "allow"
