cargo-features = ["codegen-backend"]

[workspace]
members = ["backend", "domain"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
color-eyre = "0.6"
domain = { path = "domain" }
dotenvy = "0.15.7"
ev_lib = { version = "0.6.2", features = ["architecture"] }
jiff = "0.2"
# Transactional email. rustls (not native-tls) to share one TLS stack with sqlx.
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "hostname"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sqlx = "0.9.0"
thiserror = "2.0.18"
time = "0.3"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = "0.7.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utoipa = "5.5.0"
utoipa-swagger-ui = "9.0.2"
uuid = "1.23.4"

[workspace.lints.rust]
unused_features = "allow"

# smaller target/: trim debuginfo (deps need none), keep line tables for backtraces
[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

#[patch.crates-io]
#ev_lib.path = "../lib/rust"
