[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Backend API for the EV Investment landing site"
license = "BlueOak-1.0.0"
publish = false
default-run = "backend"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
domain.workspace = true
dotenvy.workspace = true
ev = { workspace = true, features = ["analytics", "error_monitoring"] }
jiff = { workspace = true, features = ["serde"] }
lettre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
utoipa = { workspace = true, features = ["uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[lints]
workspace = true
